[package]
name = "notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
prometheus-http-query = "0.6.6"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.30.0", features = ["macros"] }
